--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -57,6 +58,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "postinstall": "flow-scripts stub",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -97,7 +99,7 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app","flow"
     ],
     "plugins": [
       [
@@ -117,6 +119,11 @@
   "proxy": "http://localhost:9093",
   "devDependencies": {
     "babel-plugin-import": "^1.6.6",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.67.1",
+    "flow-scripts": "^0.4.0",
+    "flowtype-loader": "^0.2.2",
+    "react-app-rewired": "^1.5.0"
   }
 }
