--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutable": "^3.8.2",
     "jest": "20.0.4",
     "mongoose": "^5.0.8",
     "object-assign": "4.1.1",
@@ -45,6 +46,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
@@ -99,7 +101,8 @@
   },
   "babel": {
     "presets": [
-      "react-app","flow"
+      "react-app",
+      "flow"
     ],
     "plugins": [
       [
