--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/morgan": "^1.7.35",
     "antd-mobile": "^2.1.6",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
@@ -20,6 +21,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "errorhandler": "^1.5.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -33,12 +35,16 @@
     "html-webpack-plugin": "2.29.0",
     "immutable": "^3.8.2",
     "jest": "20.0.4",
-    "mongoose": "^5.0.8",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.0.11",
+    "morgan": "^1.9.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
+    "pug": "^2.0.1",
+    "q": "^1.5.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
@@ -63,7 +69,12 @@
     "postinstall": "flow-scripts stub",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "node dist/server.js",
+    "build-tsc": "tsc",
+    "watch-ts": "tsc -w",
+    "grunt": "grunt",
+    "www": "node ./bin/www"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -121,12 +132,26 @@
   },
   "proxy": "http://localhost:9093",
   "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/errorhandler": "^0.0.32",
+    "@types/express": "^4.11.1",
+    "@types/method-override": "^0.0.31",
+    "@types/mongodb": "^3.0.8",
+    "@types/mongoose": "^5.0.7",
+    "@types/socket.io": "^1.4.32",
+    "@types/socket.io-client": "^1.4.32",
     "babel-plugin-import": "^1.6.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.67.1",
     "flow-scripts": "^0.4.0",
     "flowtype-loader": "^0.2.2",
-    "react-app-rewired": "^1.5.0"
+    "grunt": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ts": "^6.0.0-beta.19",
+    "react-app-rewired": "^1.5.0",
+    "typescript": "^2.7.2"
   }
 }
